fix: normalized selectors

--- a/frontend/source/modules/styles/classes/flex.scss
+++ b/frontend/source/modules/styles/classes/flex.scss
@@ -1,7 +1,7 @@
 @import '@styles/utils/functions';
 
 // common
-.flex, .row, .rows, .col, .cols {
+.flex, .row, .rows, .column, .columns {
   display: flex;
 }
 
