update: normal line-height on pseudo-headings (.hN)

--- a/frontend/source/modules/styles/classes/typography.scss
+++ b/frontend/source/modules/styles/classes/typography.scss
@@ -10,7 +10,11 @@
     font-size: rem($size);
     font-weight: map-get($fontWeight, 'regular');
     margin: 0;
-    line-height: rem($size * 1.5);
+    line-height: rem($size * 1.75);
+  }
+
+  .#{$level} {
+    line-height: normal;
   }
 }
 
